[package]
name = "snmp"
version = "0.2.3"
authors = ["Hroi Sigurdsson <hroi@asdf.dk>"]
description = "SNMP client library"
license = "MIT/Apache-2.0"
repository = "https://github.com/hroi/rust-snmp"
documentation = "https://docs.rs/crate/snmp"
readme = "README.md"
keywords = ["networking", "snmp", "monitoring"]
edition = "2018"

[features]
default = ["stream"]
stream = ["futures","futures-util"]

[dependencies]
tokio = { version="1", features = ["net","macros"] }
tokio-test = "0.4" 
tokio-util = { version = "0", features = [ "codec" ] }
serde = { version = "1", features = ["derive"] }
futures = { version="0", optional = true }
futures-util = { version="0", optional = true }
log = "0"
