[package]
name = "snmp"
version = "0.3.1"
authors = ["Vladimir Melnikov <wlad.w.m@gmail.com>","Hroi Sigurdsson <hroi@asdf.dk>"]
description = "SNMP client library"
license = "MIT/Apache-2.0"
repository = "https://github.com/hroi/rust-snmp"
documentation = "https://docs.rs/crate/snmp"
readme = "README.md"
keywords = ["networking", "snmp", "monitoring"]
edition = "2021"

[features]
default = []
stream = ["futures","futures-util"]
sync = []
simpleasync = ["tokio","tokio-util"]
async = ["tokio","tokio-util"]
v3 = ["openssl"]
localdes = ["easydes"]

[dependencies]
tokio = { version="1", features = ["net","macros","time","rt"], optional = true }
tokio-test = { version = "0.4", optional = true} 
tokio-util = { version = "0", features = [ "codec" ] , optional = true }
serde = { version = "1", features = ["derive"] }
futures = { version="0", optional = true }
futures-util = { version="0", optional = true }
log = "0"
openssl = { version = "0.10", optional = true }
easydes = { version = "0.1.6", optional = true }

[dev-dependencies]
tokio = { version="1", features = ["full"] }
